# ai-sales-sdr

./: .env.example  .gitignore  LICENSE  README.md  STATUS.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
docs/: AI_SALES_PIPELINE_BLUEPRINT.md  AnalyticsGear_AI_Native_Pipeline_Technical_Blueprint.docx  AnalyticsGear_AI_Sales_Pipeline_Blueprint.docx
project_management/: AnalyticsGear_AI_Pipeline_Project_Plan.xlsx
scripts/: generate_ai_native_doc.py  generate_doc.py  generate_jira_excel.py
src/: __init__.py
src/agents/: __init__.py  analytics_agent.py  base_agent.py  followup_agent.py  orchestrator.py  outreach_agent.py  prospecting_agent.py
src/config/: icp.yaml  scoring.yaml  sequences.yaml
src/feedback/: __init__.py  tracker.py
src/mcp_servers/: __init__.py
src/mcp_servers/mcp_apollo/: server.py
src/mcp_servers/mcp_crm/: server.py
src/mcp_servers/mcp_email/: server.py
src/mcp_servers/mcp_linkedin/: server.py
src/mcp_servers/mcp_scraper/: server.py
src/mcp_servers/mcp_vectordb/: server.py
src/memory/: __init__.py  lead_memory.py  pattern_memory.py
src/prompts/: analytics.txt  followup.txt  outreach.txt  prospecting.txt
src/rag/: __init__.py  chunker.py  embedder.py  init_collections.py  retriever.py
tests/: test_smoke.py
