[project]
name = "analyticsgear-sales-pipeline"
version = "0.1.0"
description = "AI-native sales pipeline using MCP, Agents, RAG, and Vector Databases"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "AnalyticsGear" }]

dependencies = [
    # LLM
    "anthropic>=0.40.0",
    # Vector DB
    "qdrant-client>=1.12.0",
    # Embeddings
    "voyageai>=0.3.0",
    # MCP
    "mcp>=1.0.0",
    # CRM / Sheets
    "gspread>=6.0.0",
    "google-auth>=2.30.0",
    # Email
    "sendgrid>=6.11.0",
    # Prospecting / Scraping
    "httpx>=0.27.0",
    "apify-client>=1.7.0",
    # Orchestration
    "apscheduler>=3.10.0",
    # Config & utils
    "python-dotenv>=1.0.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    # Observability
    "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
docs = [
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
